tests/spec/parse/snapshots/function_recursive.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn factorial(n: int) -> int {
    if n <= 1 {
      return 1;
    }
    return n * factorial(n - 1);
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "factorial",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 9,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "n",
                    span: Span {
                        file_id: 0,
                        byte_offset: 14,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 17,
                            byte_length: 3,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "int",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 25,
                byte_length: 3,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    If {
                        condition: Binary {
                            operator: LessThanOrEqual,
                            left: Identifier {
                                value: "n",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 36,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                            right: Literal {
                                literal: Integer {
                                    value: 1,
                                    text: None,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 41,
                                    byte_length: 1,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 36,
                                byte_length: 6,
                            },
                        },
                        consequence: Block {
                            items: [
                                Return {
                                    expression: Literal {
                                        literal: Integer {
                                            value: 1,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 56,
                                            byte_length: 1,
                                        },
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 49,
                                        byte_length: 8,
                                    },
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 43,
                                byte_length: 19,
                            },
                        },
                        alternative: None,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 33,
                            byte_length: 29,
                        },
                    },
                    Return {
                        expression: Binary {
                            operator: Multiplication,
                            left: Identifier {
                                value: "n",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 72,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                            right: Call {
                                expression: Identifier {
                                    value: "factorial",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 76,
                                        byte_length: 9,
                                    },
                                    resolution: Unresolved,
                                },
                                args: [
                                    Binary {
                                        operator: Subtraction,
                                        left: Identifier {
                                            value: "n",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 86,
                                                byte_length: 1,
                                            },
                                            resolution: Unresolved,
                                        },
                                        right: Literal {
                                            literal: Integer {
                                                value: 1,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 90,
                                                byte_length: 1,
                                            },
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 86,
                                            byte_length: 5,
                                        },
                                    },
                                ],
                                spread: None,
                                type_arguments: None,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 76,
                                    byte_length: 16,
                                },
                                call_kind: Unresolved,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 72,
                                byte_length: 20,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 65,
                            byte_length: 27,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 29,
                    byte_length: 66,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 94,
        },
    },
]
