tests/spec/parse/snapshots/function_with_empty_body.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn noop() {
    // does nothing
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "noop",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 21,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 31,
        },
    },
]
